# jpeg-android

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nick/compress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/nick/compress/: JpegUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/nick/compress/: ExampleUnitTest.java
